# component-testing

./: .gitignore  README.md
dotnet/: README.md  (+2 more)
python/: README.md  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
python/harness/: __init__.py  database.py  fixture.py  images.py  kafka_harness.py  llm_harness.py  presence_harness.py  rabbitmq_harness.py  redis_harness.py  s3_harness.py  unfurl_harness.py
python/scripts/: conformance.py
python/src/relay/: __init__.py
python/src/relay/apierr/: __init__.py
python/src/relay/app/: __init__.py  attachments_routes.py  build.py  channels_routes.py  deps.py  dm_routes.py  feed_routes.py  identity.py  linkpreview_routes.py  presence_routes.py  requests.py  responses.py  seams_impl.py  summary_routes.py  users_routes.py
python/src/relay/domain/: __init__.py
python/src/relay/idgen/: __init__.py
python/src/relay/infra/: __init__.py  codecs.py  kafka_infra.py  link_previewer.py  rabbit_infra.py  redis_infra.py  s3_infra.py
python/src/relay/paging/: __init__.py
python/src/relay/presence/: __init__.py  client.py  presence.proto  presence_pb2.py  presence_pb2_grpc.py  service.py
python/src/relay/seams/: __init__.py
python/tests/: attachments_test.py  channels_test.py  conftest.py  dm_test.py  expect_catch_to_fail.py  feed_test.py  helpers.py  identity_users_test.py  linkpreview_test.py  notifications_test.py  pagination_test.py  presence_test.py  summary_test.py  test_smoke.py
python/tests/gallery/: naive_demos_test.py  test_lying_gallery.py
python/tests/naive/: __init__.py  naive_seams.py
(+441 files in other folders)
